# roboplan-ros

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  colcon_defaults.yaml  docker-compose.yaml  pixi.toml
.docker/: Dockerfile  entrypoint.sh  ros_python_requirements_humble.txt  ros_python_requirements_lyrical.txt  ros_python_requirements_rolling.txt
.github/workflows/: build_and_test.yml
docker/: Dockerfile  run.sh
docs/: README.md  python_docs_requirements.txt
docs/source/: api_cpp.rst  api_py.rst  conf.py  design.rst  examples.rst  getting_started.rst  index.rst
docs/source/_templates/autoapi/: index.rst
roboplan_ros/: CMakeLists.txt  package.xml
roboplan_ros/include/roboplan_ros/: type_conversions.hpp  types.hpp
roboplan_ros/python/: bindings.cpp
roboplan_ros/test/: CMakeLists.txt  test_bindings.py  test_type_conversions.cpp  test_types.cpp
roboplan_ros_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
roboplan_ros_cpp/bindings/: CMakeLists.txt
roboplan_ros_cpp/bindings/include/roboplan_ros_cpp_bindings/: roboplan_ros_cpp_bindings.hpp
roboplan_ros_cpp/bindings/python/roboplan_ros/cpp/: __init__.py  _cpp_ext.pyi
roboplan_ros_cpp/bindings/src/: roboplan_ros_cpp_bindings.cpp
roboplan_ros_cpp/bindings/test/: test_type_conversions.py
roboplan_ros_cpp/docs/: Doxyfile
roboplan_ros_cpp/include/roboplan_ros_cpp/: bindings.hpp  kinematics.hpp  type_conversions.hpp
roboplan_ros_cpp/roboplan_ros_cpp/: bindings.pyi  py.typed
roboplan_ros_cpp/src/: bindings.cpp  kinematics.cpp  roboplan_ros_cpp_bindings.cpp  type_conversions.cpp
roboplan_ros_cpp/test/: CMakeLists.txt  test_kinematics.cpp  test_type_conversions.cpp  test_type_conversions.py
roboplan_ros_cpp/test/resources/: test_robot.srdf  test_robot.urdf
roboplan_ros_examples/roboplan_ros_examples/: CHANGELOG.rst  CMakeLists.txt  package.xml
roboplan_ros_examples/roboplan_ros_examples/roboplan_ros_examples/: __init__.py  utils.py
roboplan_ros_examples/roboplan_ros_examples/test/: CMakeLists.txt  import_ros_bindings_test.py
roboplan_ros_examples/roboplan_ros_franka/: CHANGELOG.rst  CMakeLists.txt  package.xml
roboplan_ros_examples/roboplan_ros_franka/config/: fr3_mujoco_obstacles.yaml  franka_ik_config.rviz  franka_oink_config.rviz  ros2_controllers.yaml
roboplan_ros_examples/roboplan_ros_franka/description/: fr3_mujoco_inputs.xml  fr3_mujoco_scene.xml
roboplan_ros_examples/roboplan_ros_franka/launch/: franka_control.launch.yaml  franka_example_plan.launch.py  franka_example_planning.launch.yaml  franka_optimal_ik_streaming.launch.yaml
roboplan_ros_examples/roboplan_ros_franka/scripts/: example_ik_node.py  optimal_ik_streaming_node.py  plan_and_execute_node.py
roboplan_ros_franka/: CMakeLists.txt  package.xml
roboplan_ros_franka/config/: franka_config.rviz  franka_ik_config.rviz  ros2_controllers.yaml
roboplan_ros_franka/launch/: franka_example.launch.py  franka_example_ik.launch.py
roboplan_ros_franka/scripts/: example_ik_node.py
roboplan_ros_py/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
roboplan_ros_py/roboplan_ros_py/: interactive_marker_ik.py  kinematics.py  trajectory_publisher.py  type_conversions.py
roboplan_ros_py/test/: test_kinematics.py  test_type_conversions.py
roboplan_ros_visualization/: CHANGELOG.rst  CMakeLists.txt  package.xml
roboplan_ros_visualization/bindings/: CMakeLists.txt
roboplan_ros_visualization/bindings/python/roboplan_ros/visualization/: __init__.py  _visualization_ext.pyi
roboplan_ros_visualization/bindings/src/: roboplan_ros_visualization_bindings.cpp
roboplan_ros_visualization/bindings/test/: roboplan_ik_marker_test.py  roboplan_visualizer_test.py
roboplan_ros_visualization/docs/: Doxyfile
roboplan_ros_visualization/include/roboplan_ros_visualization/: interactive_marker_ik.hpp  path_visualization.hpp  roboplan_ik_marker.hpp  roboplan_visualizer.hpp
roboplan_ros_visualization/roboplan_ros_visualization/: bindings.pyi  interactive_marker_ik.py  roboplan_visualizer.py
roboplan_ros_visualization/src/: bindings.cpp  interactive_marker_ik.cpp  interactive_marker_ik_node.cpp  path_visualization.cpp  roboplan_ik_marker.cpp  roboplan_ros_visualization_bindings.cpp  roboplan_visualizer.cpp
roboplan_ros_visualization/test/: CMakeLists.txt  roboplan_ik_marker_test.cpp  roboplan_ik_marker_test.py  roboplan_visualizer_test.cpp  roboplan_visualizer_test.py
roboplan_roscpp/: CMakeLists.txt  package.xml
roboplan_roscpp/include/roboplan_roscpp/: type_conversions.hpp
roboplan_roscpp/test/: CMakeLists.txt  test_type_conversions.cpp
roboplan_rospy/: package.xml  setup.cfg  setup.py
roboplan_rospy/roboplan_rospy/: type_conversions.py
roboplan_rospy/test/: test_type_conversions.py
