<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_ros_cpp</name>
  <version>0.0.0</version>
  <description>ROS 2 C++ bindings for the roboplan motion planning library.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <maintainer email="eholum@gmail.com">Erik Holum</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>roboplan</depend>
  <depend>roboplan_simple_ik</depend>

  <depend>Eigen3</depend>
  <depend>geometry_msgs</depend>
  <depend>pinocchio</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>roboplan_example_models</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
