<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_ros_cpp</name>
  <version>0.0.0</version>
  <description>ROS 2 C++ bindings for the roboplan motion planning library.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <maintainer email="eholum@gmail.com">Erik Holum</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>

  <depend>roboplan</depend>
  <depend>roboplan_bindings</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <!-- While nanobind-dev is available from rosdistro the apt package is very out of date. -->
  <!-- Nanobind should only be installed manually from pip until this is released in a sync: -->
  <!-- https://github.com/ros/rosdistro/pull/49894 -->
  <!-- <depend>nanobind-dev</depend> -->
  <depend>pinocchio</depend>
  <depend>rosidl_generator_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tl_expected</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_index_cpp</test_depend>
  <test_depend>roboplan_example_models</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
