<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roboplan_ros_visualization</name>
  <version>0.5.0</version>
  <description>ROS 2 visualization tools for the RoboPlan library.</description>
  <maintainer email="sebas.a.castro@gmail.com">Sebastian Castro</maintainer>
  <maintainer email="eholum@gmail.com">Erik Holum</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>nanobind-dev</build_depend>
  <build_depend>python3-dev</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>roboplan</depend>
  <depend>roboplan_ros_cpp</depend>
  <depend>roboplan_simple_ik</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
